Add '25w35a' sources